Fixed some multiple widget definitions
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2284 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/qisis/apps/qnet/QnetDeletePointDialog.ui
+++ b/isis/src/qisis/apps/qnet/QnetDeletePointDialog.ui
@@ -18,7 +18,7 @@
   <property name="modal" >
    <bool>true</bool>
   </property>
-  <widget class="QWidget" name="layoutWidget" >
+  <widget class="QWidget" name="deletePointLayoutWidget" >
    <property name="geometry" >
     <rect>
      <x>20</x>
