Fixed some multiple widget definitions
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2285 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/qisis/apps/qnet/QnetSetAprioriDialog.ui
+++ b/isis/src/qisis/apps/qnet/QnetSetAprioriDialog.ui
@@ -28,7 +28,7 @@
    <property name="flat">
     <bool>false</bool>
    </property>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QWidget" name="groundSourceLayoutWidget">
     <property name="geometry">
      <rect>
       <x>11</x>
@@ -335,7 +335,7 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="buttonLayoutWidget">
    <property name="geometry">
     <rect>
      <x>21</x>
