--- a/isis/src/qisis/apps/qnet/QnetSetAprioriDialog.ui
+++ b/isis/src/qisis/apps/qnet/QnetSetAprioriDialog.ui
@@ -17,9 +17,15 @@
    <item row="0" column="0" rowspan="2">
     <widget class="QGroupBox" name="pointSourceGroupBox">
      <property name="title">
-      <string>Point Ground Source</string>
+      <string>Set Apriori Point (lat,lon,radius)</string>
      </property>
      <property name="flat">
+      <bool>false</bool>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
       <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
@@ -31,7 +37,7 @@
            <string>Reference Measure</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
