Sorting implemented, but still needs work so is an option
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@3139 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/qisis/apps/cneteditor/cneteditor.qrc
+++ b/isis/src/qisis/apps/cneteditor/cneteditor.qrc
@@ -6,5 +6,6 @@
     <file alias="close">icons/close.png</file>
     <file alias="quit">icons/quit.png</file>
     <file alias="add">icons/add.png</file>
+    <file alias="sort">icons/sort.png</file>
   </qresource>
 </RCC>
