--- a/isis/src/qisis/apps/cneteditor/cneteditor.qrc
+++ b/isis/src/qisis/apps/cneteditor/cneteditor.qrc
@@ -7,5 +7,6 @@
     <file alias="quit">icons/quit.png</file>
     <file alias="add">icons/add.png</file>
     <file alias="sort">icons/sort.png</file>
+    <file alias="ice">icons/ice.png</file>
   </qresource>
 </RCC>
